--- a/Sample/src/main/res/values/strings.xml
+++ b/Sample/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_list_sample">ListSample</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="pull_to_refresh">Pull the list to refresh</string>
 </resources>
